Fixed tag cloud wrapping.

--- a/themes/wirehaiku/assets/style.scss
+++ b/themes/wirehaiku/assets/style.scss
@@ -164,6 +164,7 @@ main {
     line-height: 2rem;
 
     .cloud-item {
+        display: inline-block;
         margin: 0 0.25rem;
     }
 }
